<resources>
    <string name="app_name">Eco dong</string>
    <string name="FACEBOOK_APP_ID">1334381220058392</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">622b9154a4e6bb2d4c94e467daa8afe1</string>
    //=========================================login
    start=========================================//
    <string name="login_hint_phone">您的手机号</string>
    <string name="login_forget_pwd">忘记密码?</string>
    <string name="login_registered">注册</string>
    <string name="login_hint_sms_code">输入验证码</string>
    <string name="login_hint_img_code">输入图形验证码</string>
    <string name="login_hint_img_code_go">图形验证码已发送</string>
    <string name="login_hint_img_sms_go">短信验证码已发送</string>
    <string name="login_login">登录</string>
    <string name="login_get_code">获取验证码</string>
    <string name="login_toast_phone">请输入手机号码</string>
    <string name="login_toast_sms_code">请输入短信验证码</string>
    <string name="login_toast_img_code">请输入图形验证码</string>
    <string name="login_register">即代表同意</string>
    <string name="login_protocol">《**服务协议》</string>
    <string name="login_signupnow">立即注册</string>
    //=========================================login end=========================================//

    //=========================================mine start=========================================//
    <string name="mine_order">我的订单</string>

    about us
    <string name="mine_about_us">关于我们</string>
    <string name="mine_bank">银行卡管理</string>
    <string name="mine_add_money">提额</string>
    <string name="mine_message">消息中心</string>
    <string name="mine_about">联系我们</string>
    <string name="mine_setting">设置</string>
    <string name="mine_title">我的</string>
    <string name="mine_state_authed">已认证</string>
    <string name="mine_state_unauthed">未认证</string>
    <string name="mine_toast_not_increase">暂时没有提额资格</string>
    <string name="mine_toast_increasing">正在提额中</string>
    <string name="mine_toast_auth_bank">请先进行银行卡认证</string>
    //=========================================mine end=========================================//

    //=========================================home start=========================================//
    <string name="home_title">首页</string>
    <string name="go_money">去拿钱</string>
    <string name="home_face">人脸识别</string>
    <string name="home_backs">银行卡</string>
    <string name="home_imme_apply">马上申请</string>
    <string name="home_imme_loan">立即借款</string>
    <string name="home_see_order">查看订单</string>
    <string name="home_toast_min_max">最小金额大于最大金额</string>
    <string name="home_toast_lost_money">未获取到借款金额</string>
    //=========================================home end=========================================//

    //=========================================setting
    start=========================================//
    <string name="setting_title">设置</string>
    <string name="setting_toast_clear">清除缓存完成</string>
    <string name="setting_suggest">意见反馈</string>
    <string name="setting_update">版本升级</string>
    <string name="setting_pwd">修改密码</string>
    <string name="setting_clear_memory">清理缓存</string>
    <string name="setting_exit">安全退出</string>
    <string name="setting_phone">     请输入登陆手机号验证码</string>
    <string name="setting_code">请输入验证码</string>
    <string name="setting_oldpassword">请输入原来密码</string>
    <string name="setting_password">请输入密码</string>
    <string name="setting_password1">请确认密码</string>
    <string name="setting_get">获取验证码</string>
    //=========================================setting
    end=========================================//
    //====================================money
    start=================================//

    //=========================================auth start=========================================//
    <string name="auth_identity_title">身份认证</string>
    <string name="auth_phone_title">运营商认证</string>
    <string name="auth_toast_identity_authed">身份信息已认证</string>
    <string name="auth_toast_bank_authed">银行卡信息已认证</string>
    //=========================================auth end=========================================//

    //=========================================increase money
    start=========================================//
    <string name="increase_title">申请提额</string>
    <string name="increase_toast">申请提额已提交</string>
    //=========================================increase money
    end=========================================//

    //=========================================about
    start=========================================//
    <string name="about_toast_wx">检查到您手机没有安装微信，请安装后使用该功能</string>
    <string name="about_toast_qq">请先安装QQ再与客服人员联系</string>
    <string name="about_work_time">工作时间：（周一至周日 9:00 -18:00）</string>
    //=========================================about end=========================================//

    //=========================================loanRecord
    start=========================================//
    <string name="lr_num">订单编号</string>
    <string name="lr_day">天</string>
    <string name="lr_status_sqz">申请中</string>
    <string name="lr_status_shz">审核中</string>
    <string name="lr_status_ddk">待打款</string>
    <string name="lr_status_dhk">待还款</string>
    <string name="lr_status_yq">逾期</string>
    <string name="lr_status_yhk">已还款</string>
    <string name="lr_status_refuse">拒绝</string>
    <string name="lr_status_hz">坏账</string>
    <string name="lr_status_ckz">出款中</string>
    <string name="lr_status_cksb">出款失败</string>
    <string name="lr_text_money">金额（元）</string>
    <string name="lr_text_repay">应还（元）</string>
    <string name="lr_text_qixian">期限（天）</string>
    <string name="lr_btn_reneway">申请续期</string>
    <string name="lr_btn_pay">还款</string>
    //=========================================loanRecord
    end=========================================//

    //=========================================loanDetail
    start=========================================//
    <string name="ld_title">详情</string>
    <string name="ld_text_jkxx">借款信息</string>
    <string name="ld_text_jkje">借款金额</string>
    <string name="ld_text_jkqx">借款期限</string>
    <string name="ld_text_dzje">到账金额</string>
    <string name="ld_text_dzyhk">到账银行卡</string>
    <string name="ld_text_ll">利率</string>
    <string name="ld_text_zhfy">综合费用</string>
    <string name="ld_text_hkxx">还款信息</string>
    <string name="ld_text_yhje">合计应还金额</string>
    <string name="ld_text_jyxy">交易协议</string>
    <string name="ld_text_jkxy">《借款协议》</string>
    <string name="ld_text_need">您需要在</string>
    <string name="ld_text_pay">还款</string>
    <string name="ld_text_btn_sq">确认申请</string>
    //=========================================loanDetail
    end=========================================//

    //=========================================recordDetail
    start=========================================//
    <string name="rd_title">订单详情</string>
    <string name="rd_jkbh">借款编号</string>
    <string name="rd_sqsj">申请时间</string>
    <string name="rd_ddje">订单金额</string>
    <string name="rd_ddqx">订单期限</string>
    <string name="rd_sjdz">实际到账</string>
    <string name="rd_yhbj">应还本金</string>
    <string name="rd_yqfy">逾期费用</string>
    //=========================================recordDetail
    end=========================================//

    //=========================================basic
    start=========================================//
    <string name="basic_title">基本信息</string>
    <string name="basic_btn_tj">提交</string>

    //=========================================basic end=========================================//

    //=========================================language dialog
    start=========================================//
    <string name="language_qh">切换</string>
    <string name="language_ch">简体中文(Tiếng Trung giản thể)</string>
    <string name="language_vn">越南语(Tiếng việt)</string>
    <string name="language_cancel">取消</string>
    <string name="language_option">选择语言</string>
    //=========================================language dialog
    end=========================================//


    //=========================================basic one
    start=========================================//
    <string name="bone_grxx">个人信息</string>
    <string name="bone_xl">学历:</string>
    <string name="bone_dzyx">电子邮箱:</string>
    //=========================================basic one
    end=========================================//

    //=========================================basic two
    start=========================================//
    <string name="btwo_gsxx">公司信息</string>
    <string name="btwo_gsmc">公司名称:</string>
    <string name="btwo_zw">职位:</string>
    <string name="btwo_gznx">工作年限:</string>
    <string name="btwo_xz">薪资:</string>
    <string name="btwo_gsdh">公司电话:</string>
    <string name="btwo_gswz">公司网址(选填):</string>
    <string name="btwo_gsxxdz">公司详细地址:</string>
    //=========================================basic two
    end=========================================//


    //=========================================basic three
    start=========================================//
    <string name="bthree_lxrxm">联系人姓名:</string>
    <string name="bthree_lxrdh">联系人电话:</string>
    <string name="bthree_guanxi">与联系人关系:</string>
    <string name="bthree_person_one">紧急联系人1</string>
    <string name="bthree_person_two">紧急联系人2</string>

    //=========================================basic three
    end=========================================//

    <string name="basic_hint_input">请输入</string>
    <string name="basic_hint_option">请选择</string>
    <string name="basic_toast_finish">请完善资料</string>
    <string name="basic_toast_finish1">请填写正确的邮箱格式</string>
    <string name="op_option">选填</string>
    <string name="yhk_auth">银行卡认证</string>
    <string name="face_zheng">身份证正面</string>
    <string name="face_fan">身份证反面</string>
    <string name="upload_camera">请上传图片</string>
    <string name="per_camera">请去应用程序权限里面开启相机权限</string>
    <string name="per_store">请去应用程序权限里面开启存储权限</string>

    //=========================================bank vn
    start=========================================//
    <string name="bank_name">姓名</string>
    <string name="bank_yhk_name">银行名称</string>
    <string name="bank_yhk_num">银行卡号</string>
    <string name="bank_fh_name">分行名称</string>
    <string name="bank_zone">所在区域</string>
    <string name="bank_month">到期月份</string>
    <string name="bank_year">到期年</string>
    <string name="bank_type_yhk">Bank account</string>
    <string name="bank_type_atm">ATM Card</string>
    //=========================================bank vn
    end=========================================//


    <string name="renewal_title">续期</string>
    <string name="money">元</string>
    <string name="network_load">加载中...</string>
    <string name="sure">确定</string>
    <string name="jine">金额</string>


    //=========================================renewal
    start=========================================//
    <string name="xqqx">续期期限</string>
    <string name="xqhkr">续期还款日</string>
    <string name="dqyh">到期应还</string>
    <string name="xqfy">续期费用</string>
    <string name="bqlx">本期利息</string>
    <string name="yqfy">逾期费用</string>
    <string name="hjykje">合计应扣金额</string>
    //=========================================renewal
    end=========================================//

    <string name="fwf">服务费</string>
    <string name="lixi">利息</string>
    <string name="knowl">我知道了</string>


    <string name="face_name">姓名:</string>
    <string name="face_num_id">身份证号码:</string>

    <string name="secret_title">保密政策</string>
    <string name="birth">出生日期:</string>
    <string name="phone">客服电话</string>
    <string name="auth_toast_order">请先完成上一步认证</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="passwordtwice">两次输入密码不一致</string>

    <string name="completecertification">请先完成认证</string>
    CommonUtil.showToast(getResources().getString(R.string.home_toast_lost_money));
</resources>
