<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:background="@color/public_line_color"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<RelativeLayout
    android:background="@mipmap/mine_bg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/img_min_head"
        android:layout_marginTop="@dimen/size_dp_50"
        android:layout_centerHorizontal="true"
        android:background="@mipmap/mine_myhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></ImageView>
    <TextView
        android:id="@+id/tv_mine_phone"
        android:layout_marginTop="@dimen/size_dp_15"
        android:layout_width="wrap_content"
        android:textSize="@dimen/size_dp_25"
        android:text="13520612491"
        android:textColor="@color/color_white"
        android:layout_below="@id/img_min_head"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"></TextView>
    <TextView
        android:id="@+id/tv_renzheng"
        android:textColor="@color/color_white"
        android:layout_width="wrap_content"
        android:text="@string/mine_state_authed"
        android:layout_below="@id/tv_mine_phone"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/size_dp_10"
        android:layout_height="wrap_content"></TextView>
</RelativeLayout>
        <com.eoc.dong.common.widget.SettingActionView
            android:id="@+id/eco_order"
            android:background="@color/color_white"
            app:is_show_arrow="true"
            app:icon_src="@mipmap/mine_myorder"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_dp_95"
            app:is_show_line="false"
            app:title_name="@string/mine_order" />
        <View
            android:layout_width="match_parent"
            android:background="@color/public_line_color"
            android:layout_height="@dimen/size_dp_1"></View>
        <com.eoc.dong.common.widget.SettingActionView
            android:id="@+id/eco_back"
            app:is_show_arrow="true"
            android:background="@color/color_white"
            app:icon_src="@mipmap/mine_myback"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_dp_95"
            app:is_show_line="false"
            app:title_name="@string/mine_bank" />
        <View
            android:layout_width="match_parent"
            android:background="@color/public_line_color"
            android:layout_height="@dimen/size_dp_1"></View>
        <View
            android:layout_width="match_parent"
            android:background="@color/public_line_color"
            android:layout_height="@dimen/size_dp_15"></View>
        <com.eoc.dong.common.widget.SettingActionView
            android:id="@+id/eco_money"
            app:is_show_arrow="true"
            android:background="@color/color_white"
            app:icon_src="@mipmap/mine_mymoney"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_dp_95"
            app:is_show_line="false"
            app:title_name="@string/mine_add_money" />
        <View
            android:layout_width="match_parent"
            android:background="@color/public_line_color"
            android:layout_height="@dimen/size_dp_1"></View>
        <View
            android:layout_width="match_parent"
            android:background="@color/public_line_color"
            android:layout_height="@dimen/size_dp_15"></View>
        <com.eoc.dong.common.widget.SettingActionView
            android:id="@+id/eco_msg"
            android:background="@color/color_white"
            app:icon_src="@mipmap/mine_msg"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_dp_95"
            app:is_show_line="false"
            app:title_name="@string/mine_message" />
        <View
            android:layout_width="match_parent"
            android:background="@color/public_line_color"
            android:layout_height="@dimen/size_dp_1"></View>
        <com.eoc.dong.common.widget.SettingActionView
            android:id="@+id/eco_regard"
            app:is_show_arrow="true"
            android:background="@color/color_white"
            app:icon_src="@mipmap/mine_regard"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_dp_95"
            app:is_show_line="false"
            app:title_name="@string/mine_about_us" />
        <View
            android:layout_width="match_parent"
            android:background="@color/public_line_color"
            android:layout_height="@dimen/size_dp_1"></View>
        <com.eoc.dong.common.widget.SettingActionView
            android:id="@+id/eco_setting"
            app:is_show_arrow="true"
            android:background="@color/color_white"
            app:icon_src="@mipmap/mine_setting"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_dp_95"
            app:is_show_line="false"
            app:title_name="@string/mine_setting" />
        <View
            android:layout_width="match_parent"
            android:background="@color/public_line_color"
            android:layout_height="@dimen/size_dp_1"></View>
    </LinearLayout>
</layout>