<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout

    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/size_dp_100"
    android:layout_marginRight="@dimen/size_dp_100"
    android:background="@drawable/ic_shape_dialog"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_dp_90"
        android:gravity="center"
        android:text="@string/ld_text_zhfy"
        android:textColor="@color/color333333"
        android:textSize="@dimen/size_dp_33" />

    <TextView
       android:background="@color/public_line_color"
        android:paddingLeft="@dimen/size_dp_25"
        android:paddingRight="@dimen/size_dp_25"
        android:id="@+id/tv_show"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_dp_1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_dp_85">
        <TextView
            android:layout_marginLeft="@dimen/size_dp_25"
            android:textSize="@dimen/size_dp_28"
            android:text="@string/fwf"
            android:textColor="@color/color333333"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_platform_service"
            android:layout_marginRight="@dimen/size_dp_25"
            android:layout_alignParentRight="true"
            android:textSize="@dimen/size_dp_28"
            android:text=""
            android:textColor="@color/color333333"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_alignParentBottom="true"
            android:background="@color/public_line_color"
            android:paddingLeft="@dimen/size_dp_25"
            android:paddingRight="@dimen/size_dp_25"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_dp_1" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_dp_85">
        <TextView
            android:layout_marginLeft="@dimen/size_dp_25"
            android:textSize="@dimen/size_dp_28"
            android:text="@string/lixi"
            android:textColor="@color/color333333"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_inter"
            android:layout_marginRight="@dimen/size_dp_25"
            android:layout_alignParentRight="true"
            android:textSize="@dimen/size_dp_28"
            android:text=""
            android:textColor="@color/color333333"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_alignParentBottom="true"
            android:background="@color/public_line_color"
            android:paddingLeft="@dimen/size_dp_25"
            android:paddingRight="@dimen/size_dp_25"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_dp_1" />
    </RelativeLayout>


    <TextView

        android:id="@+id/tv_know"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_dp_90"
        android:gravity="center"
        android:text="@string/knowl"
        android:textColor="@color/public_orange"
        android:textSize="@dimen/size_dp_33" />
</LinearLayout>
</layout>


