<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.yn.xqkd.minehome.activity.FeedbackActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/public_gb_color"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:layout_marginTop="@dimen/size_dp_20"
            android:gravity="center_vertical"
            android:padding="@dimen/size_dp_20"
            android:orientation="horizontal"
            android:visibility="gone"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color333333"
                android:textSize="@dimen/size_dp_30"
                android:text="反馈类型:"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:layout_marginTop="@dimen/size_dp_20"
            android:orientation="vertical">
            <EditText
                android:id="@+id/ed_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/basic_hint_input"
                android:textColor="@color/color333333"
                android:textColorHint="@color/color999999"
                android:lineSpacingExtra="@dimen/size_dp_15"
                android:inputType="textMultiLine"
                android:minLines="5"
                android:gravity="left|top"
                android:layout_margin="@dimen/size_dp_20"
                android:textSize="@dimen/size_dp_30"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_dp_90"
            android:background="@color/colorWhite"
            android:layout_marginTop="@dimen/size_dp_20"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_dp_20"
                android:text="@string/login_hint_phone"
                android:textColor="@color/color333333"
                android:textSize="@dimen/size_dp_30"/>

            <EditText
                android:id="@+id/ed_feedback_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/op_option"
                android:layout_marginLeft="@dimen/size_dp_20"
                android:textColor="@color/color333333"
                android:textSize="@dimen/size_dp_30"/>
        </LinearLayout>
        <Button
            android:textAllCaps="false"
            android:id="@+id/btn_feedback_commit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_dp_90"
            android:background="@drawable/bg_btn_go_money"
            style="?android:attr/borderlessButtonStyle"
            android:layout_marginLeft="@dimen/size_dp_20"
            android:layout_marginRight="@dimen/size_dp_20"
            android:layout_marginTop="@dimen/size_dp_80"
            android:textSize="@dimen/size_dp_34"
            android:textColor="@color/colorWhite"
            android:text="@string/basic_btn_tj"/>
    </LinearLayout>
</layout>
